Fix network warning and remove APY truncate

--- a/src/views/EarlyClaim/earlyclaim.scss
+++ b/src/views/EarlyClaim/earlyclaim.scss
@@ -70,31 +70,6 @@
   color: #35ee66 !important;
 }
 
-.stake-top-metrics {
-  display: flex;
-  width: 100%;
-  padding: 0;
-  text-align: center;
-  margin-top: 10px;
-  h5 {
-    font-weight: 400;
-  }
-  h4 {
-    font-weight: 500;
-  }
-  .stake-apy,
-  .stake-tvl,
-  .stake-index {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-overflow: ellipsis;
-    // white-space: nowrap;
-    overflow: hidden;
-  }
-}
-
 .mobile .stake-top-metrics {
   .stake-apy,
   .stake-tvl,
