--- a/src/views/Stake/stake.scss
+++ b/src/views/Stake/stake.scss
@@ -91,7 +91,7 @@
     align-items: center;
     text-overflow: ellipsis;
     // white-space: nowrap;
-    overflow: hidden;
+    overflow-wrap: anywhere;
   }
 }
 
